--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -172,6 +172,11 @@ body
         margin: 1em;
         list-style-type: none;
     }
+
+    #blogSidebar
+    {
+        display: none;
+    }
 }
 
 /*Desktop*/
@@ -298,6 +303,36 @@ body
         margin: 1em;
         list-style-type: none;
     }
+
+    #blogSidebar
+    {
+        background-color: #fbfbfb;
+        box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
+        margin-top: 1em;
+        margin-right: 1em;
+        height: 1%;
+    }
+
+    #blogSidebar ul
+    {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: center;
+        padding-right: 2.5em;
+    }
+
+    #blogSidebar ul a
+    {
+        margin-top: 1em;
+    }
+
+    #recentBlogPageDate
+    {
+        font-size: 0.75em;
+        margin-top: -0.75em;
+    }
+
 }
 
 #intro
@@ -501,9 +536,9 @@ body
     font-size: 0.75em;
 }
 
-#blogPageDate
+#blogPagePostTitle p
 {
-    font-size: 1em;
+    margin-top: -0.75em;
 }
 
 #marginWrap h1
@@ -572,6 +607,13 @@ body
     background-color: #F06543;
     margin-top: 2em;
     margin-bottom: 2em;
+    height: 1px;
+}
+
+#postDivider
+{
+    width: 100%;
+    background-color: #F06543;
     height: 1px;
 }
 
