Added tracking analytics to default html files. Let's see how that goes.

--- a/_layouts/defaultBlog.html
+++ b/_layouts/defaultBlog.html
@@ -6,6 +6,13 @@
     <link rel="icon" href="../../../assets/image/book.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-159381904-1');
+    </script>
   </head>
   <body> 
     <main id="mainSect">
