--- a/_layouts/defaultContact.html
+++ b/_layouts/defaultContact.html
@@ -8,6 +8,13 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" 
     rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-159381904-1');
+    </script>
   </head>
   <body> 
     <main id="mainSect">
