--- a/_layouts/defaultPost.html
+++ b/_layouts/defaultPost.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-159381904-1');
+    </script>
   </head>
   <body> 
     <main id="mainSect">
