--- a/_layouts/defaultPost.html
+++ b/_layouts/defaultPost.html
@@ -28,4 +28,5 @@
   <script type="text/javascript" src="../../../assets/js/fadeEffect/index.js"></script>
   <script type="text/javascript" src="../../../assets/js/core/filter.js"></script>
   <script src="https://kit.fontawesome.com/8daf83b7f4.js" crossorigin="anonymous"></script>
+  <script src="../../../assets/js/core/enlargeImage.js"></script>
 </html>
