--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -769,6 +769,7 @@ footer
     width: 100%;
     background: #fbfbfb;
     text-align: center;
+    box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
 }
 
 footer p
