--- a/_layouts/defaultBlog.html
+++ b/_layouts/defaultBlog.html
@@ -35,6 +35,6 @@
         </div>
     </footer>
   </body>
-  <script type="text/javascript" src="../../../assets/js/fadeEffect/index.js"></script>
+  <script type="text/javascript" src="../../../assets/js/core/navbar.js"></script>
   <script type="text/javascript" src="../../../assets/js/core/filter.js"></script>
 </html>
