--- a/_layouts/defaultBlog.html
+++ b/_layouts/defaultBlog.html
@@ -28,7 +28,7 @@
       <p>Bryce R. Crist (MochaMethod)</p>
       <div id="footerLinks">
         <a href="https://github.com/MochaMethod/">Personal Github</p>
-        <a href="https://github.com/bcrist-qualitylogic">Business Github</p>
+        <a href="https://github.com/qlibcrist">Business Github</p>
         <a href="https://twitter.com/_MochaMethod">Twitter</p>
         <a href="https://www.instagram.com/brycecrisppy/?hl=en">Instagram</p>
         <a href="https://www.linkedin.com/in/mochamethod">LinkedIn</a>
@@ -36,5 +36,4 @@
     </footer>
   </body>
   <script type="text/javascript" src="../../../assets/js/core/navbar.js"></script>
-  <script type="text/javascript" src="../../../assets/js/core/filter.js"></script>
 </html>
