--- a/_layouts/defaultPost.html
+++ b/_layouts/defaultPost.html
@@ -28,7 +28,7 @@
       <p>Bryce R. Crist (MochaMethod)</p>
       <div id="footerLinks">
         <a href="https://github.com/MochaMethod/">Personal Github</p>
-        <a href="https://github.com/bcrist-qualitylogic">Business Github</p>
+        <a href="https://github.com/qlibcrist">Business Github</p>
         <a href="https://twitter.com/_MochaMethod">Twitter</p>
         <a href="https://www.instagram.com/brycecrisppy/?hl=en">Instagram</p>
         <a href="https://www.linkedin.com/in/mochamethod">LinkedIn</a>
