Fixed error thrown from assigning var to window. Removed unneeded fontawesome script from html.

--- a/_layouts/defaultPost.html
+++ b/_layouts/defaultPost.html
@@ -35,8 +35,6 @@
         </div>
     </footer>
   </body>
-  <script type="text/javascript" src="../../../assets/js/core/filter.js"></script>
-  <script type="text/javascript" src="../assets/js/core/navbar.js"></script>
-  <script src="https://kit.fontawesome.com/8daf83b7f4.js" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="../../../assets/js/core/navbar.js"></script>
   <script src="../../../assets/js/core/enlargeImage.js"></script>
 </html>
