--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -162,7 +162,7 @@ body
     {
         width: 90%;
         background-color: #FBFBFB;
-        margin: 1em;
+        margin: 0.5em;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
         list-style-type: none;
     }
@@ -427,6 +427,11 @@ body
         padding-right: 2.5em;
     }
 
+    #sidebarBottom 
+    {
+        padding: 1em;
+    }
+
     #blogSidebar ul a
     {
         margin-top: 1em;
@@ -445,6 +450,8 @@ body
         padding: 1em;
         overflow: hidden;
         max-width: 60%;
+        min-height: 3em;
+        max-height: 3em;
     }
 
     #postMarginWrap span
@@ -512,8 +519,8 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 0.5em;
-    margin-right: 0.5em;
+    margin-left: 1em;
+    margin-right: 1em;
     width: 10%;
 }
 
@@ -526,10 +533,10 @@ body
 
 #introIcons img
 {
-    margin-right: 2em;
-    margin-left: 2em;
-    width: 2em;
-    height: 2em;
+    min-width: 2em;
+    min-height: 2em;
+    max-width: 2em;
+    max-height: 2em;
 }
 
 #intro h1
@@ -575,7 +582,7 @@ body
 
 #listWrapper li
 {
-    padding: 0.25em;
+    font-size: 0.9em;
 }
 
 #projectWrapper
@@ -682,7 +689,7 @@ body
 
 #marginWrap h3
 {
-    font-size: 1em;
+    font-size: 0.9em;
     width: 95%;
 }
 
