--- a/_layouts/defaultContact.html
+++ b/_layouts/defaultContact.html
@@ -5,7 +5,7 @@
     <title>{{ page.title }}</title> 
     <link rel="icon" href="/assets/image/book.ico">
     <link rel="stylesheet" href="/assets/css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" 
+    <link href="https://fonts.googleapis.com/css?family=Fira+Code|Montserrat&display=swap" rel="stylesheet">
     rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
