--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,8 +12,9 @@
 body
 {
     background-color: #E8E9EB;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     line-height: 1.85em;
+    text-align: justify;
 }
 
 #mainSect
@@ -53,7 +54,7 @@ body
 }
 
 /*Mobile*/
-@media only screen and (max-width: 768px) 
+@media only screen and (max-width: 1049px) 
 {
     main 
     {
@@ -105,16 +106,89 @@ body
         width: 60%;
     }
 
+    #introHeadWrapper 
+    {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #codeConst
+    {
+        font-size: 0.8em;
+    }
+
+    #codeSuper
+    {
+        font-size: 0.7em;
+    }
+
+    .codeSelf
+    {
+        font-size: 0.7em;
+    }
+
+    #codeGotoSkills
+    {
+        margin-top: 1.5em;
+        font-size: 0.8em;
+    }
+
+    #verticalDivider
+    {
+        display: none;
+    }
+
+    #introParagraph
+    {
+        text-align: center;
+        margin-bottom: 2em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #introParagraph div 
+    {
+        display: flex;
+        justify-content: center;
+    }
+
+    .introButton
+    {
+        box-shadow: 3px 4px 0px 0px #DB5C3D;
+        background-color: #F06543;
+        border: 1px solid #DB5C3D;
+        cursor: pointer;
+        color: #313638;
+        padding: 0.25em;
+        min-width: 45%;
+        max-width: 45%;
+        text-align: center;
+        margin: 0.5em;
+    }
+    
+    
+    #codeIntro
+    {
+        border-top: 1px solid #F06543;
+        font-family: 'Fira Code', monospace;
+        overflow-wrap: break-word;
+        margin-bottom: 1em;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+
     #contact
     {
-        margin: 1em;
+        margin-top: -0.5em;
         width: 99%;
         background-color: #FBFBFB;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
         display: flex;
         flex-direction: column;
         align-items: center;
-
     }
 
     #blogIntro
@@ -169,7 +243,7 @@ body
     
     #skills h4 
     {
-        margin-top: -1em;
+        margin-top: -0.5em;
         text-align: center;
     }
 
@@ -243,7 +317,7 @@ body
 }
 
 /*Desktop*/
-@media only screen and (min-width: 769px)
+@media only screen and (min-width: 1050px)
 {
     #navigationElem
     {
@@ -286,7 +360,7 @@ body
     /*Main page styles*/
     #general
     {
-        width: 50%;
+        width: 55%;
     }
 
     #introIcons img
@@ -294,9 +368,68 @@ body
         width: 40%;
     }
 
+    #codeConst
+    {
+        font-size: 0.9em;
+    }
+
+    #codeSuper
+    {
+        font-size: 0.85em;
+    }
+
+    .codeSelf
+    {
+        font-size: 0.85em;
+    }
+
+    #codeGotoSkills
+    {
+        margin-top: 1.5em;
+        font-size: 0.95em;
+    }
+
+    #introHeadWrapper
+    {
+        display: flex;
+        justify-content: row;
+        margin: 1em;
+    }
+
+    #verticalDivider
+    {
+        min-width: 1px;
+        background-color: #F06543;
+        margin-top: 2em;
+        margin-right: 1em;
+    }
+
+    .introButton
+    {
+        box-shadow: 3px 4px 0px 0px #DB5C3D;
+        background-color: #F06543;
+        border: 1px solid #DB5C3D;
+        cursor: pointer;
+        color: #313638;
+        padding: 0.25em;
+        min-width: 45%;
+        max-width: 45%;
+        text-align: center;
+        margin: 0.5em;
+    }
+    
+    
+    #codeIntro
+    {
+        font-family: 'Fira Code', monospace;
+        overflow-wrap: break-word;
+        min-width: 40%; 
+        padding-right: -4em;
+    }
+
     #contact
     {
-        margin-top: 1em;
+        margin-top: -0.5em;
         width: 50%;
         background-color: #FBFBFB;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
@@ -344,12 +477,14 @@ body
     {
         min-width: 25%;
         max-width: 25%;
+        min-height: 25em;
+        max-height: 25em;
         background-color: #FBFBFB;
         display: flex;
         justify-content: center;
         flex-direction: column;
         align-content: center;
-        list-style-type: none;
+        list-style-type: circle;
         text-align: left;
         padding-right: 40px;
         margin: 1em;
@@ -370,6 +505,7 @@ body
     
     #skills h4 
     {
+        margin-top: 1em;
         margin-right: 1em;
         text-align: center;
     }
@@ -428,7 +564,7 @@ body
 
     #sidebarBottom 
     {
-        margin: 1em;
+        padding: 1em;
     }
 
     #blogSidebar ul a
@@ -477,18 +613,25 @@ body
     box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
 }
 
-#contactMe
+#codeIntro p
+{
+    margin-bottom: -0.75em;
+}
+
+
+.introButton
 {
     box-shadow: 3px 4px 0px 0px #DB5C3D;
     background-color: #F06543;
     border: 1px solid #DB5C3D;
     cursor: pointer;
     color: #313638;
-    padding: 0.75em;
+    padding: 0.25em;
     min-width: 5%;
     text-align: center;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
 }
-
 
 .headElem
 {
@@ -498,6 +641,26 @@ body
 .headElem span
 {
     color: #F06543; 
+}
+
+#codeClassSpan
+{
+    color: purple
+}
+
+#codeSuperSpan
+{
+    color: orange;
+}
+
+.codeSelfSpan
+{
+    color: blue
+}
+
+.codeDefSpan
+{
+    color: red;
 }
 
 #blogLink
@@ -581,6 +744,8 @@ body
 #listWrapper li
 {
     font-size: 0.9em;
+    min-width: 100%;
+    max-width: 100%;
 }
 
 #projectWrapper
@@ -667,6 +832,11 @@ body
 {
     margin: 1em;
 
+}
+
+#marginWrap ul
+{
+    padding-right: 40px;
 }
 
 #blogPagePostTitle
@@ -771,7 +941,7 @@ body
 {
     width: 100%;
     background-color: #F06543;
-    height: 1px;
+    min-height: 1px;
     margin-top: -0.5em;
     margin-bottom: 1em;
 }
