--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,8 +9,9 @@ layout: defaultPost
             <div id="divider"></div>
             <h1 class="headElem">{{ page.title }}</h1>
             <p id="postDate"><p id="author">{{ page.author }}: {{ page.date | date: '%B %d, %Y'}}</p>
-
+            <div id="postTextWrapper">
             {{ content }}
+            </div>
         </div>
     </div>
 </div>
