--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,7 +14,6 @@ body
     background-color: #E8E9EB;
     font-family: 'Montserrat', sans-serif;
     line-height: 1.85em;
-    text-align: justify;
 }
 
 #mainSect
@@ -49,7 +48,7 @@ body
 #navigationElem a 
 {
     padding: 0.5em;
-    min-width: 30%;
+    min-width: 35%;
     text-align: center;
 }
 
@@ -839,6 +838,11 @@ body
     padding-right: 40px;
 }
 
+marginWrap li
+{
+    min-width: 90%;
+}
+
 #blogPagePostTitle
 {
     font-size: 0.75em;
@@ -935,6 +939,11 @@ body
     width: 100%;
     background-color: #F06543;
     height: 1px;
+}
+
+#postTextWrapper
+{
+    text-align: justify;
 }
 
 .skillsDivider 
