--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -367,6 +367,12 @@ body
         width: 40%;
     }
 
+    #introParagraph 
+    {
+        margin-left: 4em;
+        margin-bottom: 2em;
+    }
+
     #codeConst
     {
         font-size: 0.9em;
@@ -401,6 +407,7 @@ body
         background-color: #F06543;
         margin-top: 2em;
         margin-right: 1em;
+        margin-bottom: 1em;
     }
 
     .introButton
@@ -470,6 +477,7 @@ body
         justify-content: center;
         align-items: center;
         width: 100%;
+        overflow: hidden;
     }
 
     #skills ul
@@ -486,7 +494,7 @@ body
         list-style-type: circle;
         text-align: left;
         padding-right: 40px;
-        margin: 1em;
+        margin-top: -4em;
     }
 
     #introWrapper
