--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,16 +8,34 @@
 #F06543 - Tomato
 #5bc3eb - Blue Jeans
 */
+html
+{
+    width: 100%;
+    height: 100%;
+    display: table;
+}
 
 body
 {
     background-color: #E8E9EB;
     font-family: 'Montserrat', sans-serif;
     line-height: 1.85em;
+
+    position: relative;
+    display: table-cell;
+    min-height: 100%;
+}
+
+html, body
+{
+    margin: 0px;
+    padding: 0px
 }
 
 #mainSect
 {
+    padding-top: 5em;
+    padding-bottom: 5em;
     width: 100%;
 }
 
@@ -28,7 +46,6 @@ body
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding-top: 4em;
 }
 
 /*Nav*/
@@ -181,7 +198,6 @@ body
 
     #contact
     {
-        margin-top: -0.5em;
         width: 99%;
         background-color: #FBFBFB;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
@@ -192,7 +208,6 @@ body
 
     #blogIntro
     {
-        margin-top: 1em;
         width: 99%;
         background-color: #FBFBFB;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
@@ -215,7 +230,6 @@ body
 
     #skills
     {
-        padding: 1em;  
         background-color: #FBFBFB;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
         display: flex;
@@ -244,18 +258,6 @@ body
     {
         margin-top: -0.5em;
         text-align: center;
-    }
-
-    #introWrapper
-    {
-        margin-top: 1em;
-        margin-bottom: 1em;
-    }
-
-    #skillsWrapper
-    {
-        margin-top: 1em;
-        margin-bottom: 1em;
     }
 
     #projectsWrapper
@@ -435,7 +437,6 @@ body
 
     #contact
     {
-        margin-top: -0.5em;
         width: 50%;
         background-color: #FBFBFB;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
@@ -447,7 +448,6 @@ body
 
     #blogIntro
     {
-        margin-top: 1em;
         width: 50%;
         background-color: #FBFBFB;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
@@ -484,8 +484,6 @@ body
     {
         min-width: 25%;
         max-width: 25%;
-        min-height: 25em;
-        max-height: 25em;
         background-color: #FBFBFB;
         display: flex;
         justify-content: center;
@@ -493,22 +491,7 @@ body
         align-content: center;
         list-style-type: circle;
         text-align: left;
-        padding-right: 40px;
-        margin-top: -4em;
     }
-
-    #introWrapper
-    {
-        margin-top: 1em;
-        margin-bottom: 1em;
-    }
-
-    #skillsWrapper
-    {
-        margin-top: 1em;
-        margin-bottom: 1em;
-    }
-
     
     #skills h4 
     {
@@ -702,10 +685,10 @@ body
 
 #introIcons img
 {
-    min-width: 2em;
-    min-height: 2em;
-    max-width: 2em;
-    max-height: 2em;
+    min-width: 1.5em;
+    min-height: 1.5em;
+    max-width: 1.5em;
+    max-height: 1.5em;
 }
 
 #intro h1
@@ -738,7 +721,6 @@ body
 
 #skills
 {
-    padding: 1em;  
     background-color: #FBFBFB;
     box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
     display: flex;
@@ -746,6 +728,7 @@ body
     text-align: center;
     flex-direction: column;
     font-size: 1em;
+    margin-top: 1.5em;
 }
 
 #listWrapper li
@@ -833,12 +816,6 @@ body
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-#marginWrap
-{
-    margin: 1em;
-
 }
 
 #marginWrap ul
@@ -1025,16 +1002,24 @@ marginWrap li
 /*Footer*/
 footer
 {
-    margin-top: 1em;
     width: 100%;
     background: #fbfbfb;
     text-align: center;
     box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
+
+    position: absolute;
+    bottom: 0;
 }
 
 footer p
 {
     margin-left: 1em;
     margin-right: 1em;
-    margin-top: 1em;
+    font-size: 0.8em;
+}
+
+footer a 
+{
+    margin-top: -1em;
+    font-size: 0.75em;
 }
