--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,6 +46,7 @@ html, body
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 2em;
 }
 
 /*Nav*/
@@ -102,7 +103,7 @@ html, body
         top: 0;
         width: 100%;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
-        background-color: #FBFBFB;
+        background-color: #24292e;
     }
 
     #navWrapper
@@ -112,10 +113,7 @@ html, body
         align-items: center;
     }
 
-    #general
-    {
-        width: 99%;
-    }
+
 
     #introIcons img
     {
@@ -328,7 +326,7 @@ html, body
         top: 0;
         width: 100%;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
-        background-color: #FBFBFB;
+        background-color: #24292e;
         padding-top: 0em;
         padding-right: 10em;
         padding-bottom: 0em;
@@ -361,7 +359,7 @@ html, body
     /*Main page styles*/
     #general
     {
-        width: 55%;
+        width: 70%;
     }
 
     #introIcons img
@@ -430,14 +428,12 @@ html, body
     #codeIntro
     {
         font-family: 'Fira Code', monospace;
-        overflow-wrap: break-word;
         min-width: 40%; 
-        padding-right: -4em;
     }
 
     #contact
     {
-        width: 50%;
+        width: 70%;
         background-color: #FBFBFB;
         box-shadow: 0 1px 2px #C6C8C8, 0 1px 3px #C6C8C8;
         display: flex;
@@ -541,6 +537,7 @@ html, body
         margin-top: 1em;
         margin-right: 1em;
         height: 1%;
+        max-width: 20%
     }
 
     #blogSidebar ul
@@ -626,6 +623,7 @@ html, body
 .headElem
 {
     font-weight: normal;
+    max-width: 85%;
 }
 
 .headElem span
@@ -645,12 +643,12 @@ html, body
 
 .codeSelfSpan
 {
-    color: blue
+    color: red;
 }
 
 .codeDefSpan
 {
-    color: red;
+    color: green;
 }
 
 #blogLink
