--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,6 +73,11 @@ html, body
 /*Mobile*/
 @media only screen and (max-width: 1049px) 
 {
+    iframe 
+    {
+        display: none;
+    }
+
     main 
     {
         font-size: 1.2em;
@@ -113,7 +118,10 @@ html, body
         align-items: center;
     }
 
-
+    #general
+    {
+        width: 99%;
+    }
 
     #introIcons img
     {
