--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,10 @@ layout: defaultPost
 <div id="postWrapper">
     <div id="post">
         <div id="postMarginWrap">
-            <a href="../../../blog.html">Return to Blog Posts</a>
+            <a href="../../../">Return to Blog Posts</a>
             <div id="divider"></div>
             <h1 class="headElem">{{ page.title }}</h1>
-            <p id="postDate"><p id="author">{{ page.author }}: {{ page.date | date: '%B %d, %Y'}}</p>
+            <p id="postDate">{{ page.date | date: '%B %d, %Y'}}</p>
             <div id="postTextWrapper">
             {{ content }}
             </div>
