--- a/_layouts/defaultPost.html
+++ b/_layouts/defaultPost.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title> 
-    <link rel="icon" href="../../../assets/image/book.ico">
+    <link rel="icon" href="../../../../assets/image/book.ico">
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Fira+Code|Montserrat&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,6 +18,5 @@
         </div>
     </main>
   </body>
-  <script type="text/javascript" src="../../../assets/js/core/navbar.js"></script>
-  <script src="../../../assets/js/core/enlargeImage.js"></script>
+  <script type="text/javascript" src="../../../../assets/js/core/navbar.js"></script>
 </html>
