--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -5,7 +5,7 @@ layout: defaultPost
 <div id="postWrapper">
     <div id="post">
         <div id="postMarginWrap">
-            <a href="../../../../">Return to Blog Posts</a>
+            <a href="../../../../recipes.html">Return to Recipes</a>
             <div id="divider"></div>
             <h1 class="headElem">{{ page.title }}</h1>
             <p id="postDate">{{ page.date | date: '%B %d, %Y'}}</p>
