--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav id="navigationElem">
   <div id="navWrapper">
     {% for item in site.data.navigation %}
-      <a id="navItem" href="{{ item.link }}" {% if page.url == item.link %}style="color: #F06543;"{% elsif page.url != item.link %}style="color: #f2f2f2;"{% endif %}>
+      <a class="navItem" href="{{ item.link }}" {% if page.url == item.link %}style="color: #F06543;"{% elsif page.url != item.link %}style="color: #f2f2f2;"{% endif %}>
         {{ item.name }}
       </a>
     {% endfor %}
