--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -58,14 +58,20 @@ html, body
 
 #navWrapper
 {
-    display: none;
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
 }
 
 #navigationElem a 
 {
-    padding: 0.5em;
-    min-width: 50%;
+    padding: 1em;
     text-align: center;
+}
+
+#recipeHeader 
+{
+    font-weight: bold;
 }
 
 /*Mobile*/
@@ -548,7 +554,8 @@ html, body
         margin-top: 1em;
         margin-right: 1em;
         height: 1%;
-        max-width: 20%
+        max-width: 15%;
+        min-width: 15%;
     }
 
     #blogSidebar ul
